# EzyTutors

./: .gitignore  Cargo.toml  README.md
ezytutors/: Cargo.toml  README.md
ezytutors/tutor-db/: .env
ezytutors/tutor-db/src/: database.sql
ezytutors/tutor-db/src/iter2/: handlers.rs  models.rs
ezytutors/tutor-db/src/iter3/: db_access.rs
ezytutors/tutor-db/src/iter5/: routes.rs
ezytutors/tutor-db/src/iter5/dbaccess/: course.rs
ezytutors/tutor-nodb/: Cargo.toml
ezytutors/tutor-nodb/src/: handlers.rs  models.rs  routes.rs  state.rs
ezytutors/tutor-web-app-ssr/: Cargo.toml
ezytutors/tutor-web-app-ssr/.sqlx/: query-001a5f5150bc3ddeb2e06e59d607af0e3d29b156ee94826320efe2dd437dd07d.json  query-43ddc0dafff65411125c46026d8c69e208771b89eda7dfc6c18c59656f345a0e.json
ezytutors/tutor-web-app-ssr/migrations/: 20241013173110_create_ezyweb_user_table.sql
ezytutors/tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  handlers.rs  mod.rs  model.rs  routes.rs
ezytutors/tutor-web-app-ssr/src/iter5/dbscripts/: user.sql
ezytutors/tutor-web-app-ssr/src/iter6/: mod.rs  model.rs  routes.rs
ezytutors/tutor-web-app-ssr/src/iter6/dbscripts/: user.sql
ezytutors/tutor-web-app-ssr/src/iter6/handler/: auth.rs  course.rs  mod.rs
ezytutors/tutor-web-app-ssr/static/css/: list_styles.css  login_styles.css  register_styles.css  reset.css  signup_styles.css
ezytutors/tutor-web-app-ssr/static/iter2/: form.html  user.html
ezytutors/tutor-web-app-ssr/static/iter3/: list.html
ezytutors/tutor-web-app-ssr/static/iter4/: list.html
ezytutors/tutor-web-app-ssr/static/iter5/: register.html
ezytutors/tutor-web-app-ssr/static/iter6/: signin.html  signup.html  user.html
ezytutors/tutor-web-app-ssr/static/js/: login_styles.js  signup-validation.js  signup_styles.js  signup_validation.js
ezytutors/tutor-web-service/: Cargo.toml  iter3-test-clean.sql
ezytutors/tutor-web-service/src/iter2/: routes.rs
ezytutors/tutor-web-service/src/iter3/: handlers.rs
ezytutors/tutor-web-service/src/iter4/: db_access.rs  errors.rs  handlers.rs  models.rs  routes.rs
ezytutors/tutor-web-service/src/iter5/: errors.rs  routes.rs
ezytutors/tutor-web-service/src/iter5/dbaccess/: tutor.rs
ezytutors/tutor-web-service/src/iter5/handlers/: general.rs  tutor.rs
ezytutors/tutor-web-service/src/iter5/models/: tutor.rs
scenario1/: Cargo.toml
scenario1/http/src/: HttpResponse.rs  http_response.rs  httprequest.rs
scenario1/httpserver/: Cargo.toml
scenario1/httpserver/data/: orders.json
scenario1/httpserver/public/: 404.html  health.html  index.html  styles.css
scenario1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
scenario1/tcpclient/src/: main.rs
scenario1/tcpserver/src/: main.rs
(+4 files in other folders)
