[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["zzaekkii"]
edition = "2021"
default-run = "tutor-service"

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
# Actix 웹 프레임워크 및 런타임.
actix-web = "4.9.0"
actix-rt = "2.10.0"

# Data 직렬화 라이브러리.
serde = {version = "1.0.209", features = ["derive"]}
# 다른 유틸리티.
chrono = {version = "0.4.38", features = ["serde"]}