[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
# 웹서버로 정적 파일 제공.
actix-files = "0.6.6"

# actix 웹 프레임워크.
actix-web = "4.9.0"
awc = { version = "3.5.1", features = ["openssl"] }

# 바이너리 빌드용 Openssl.
openssl = {version = "0.10.66", features = ["vendored"]}

# 템플릿 엔진.
tera = "1.20.0"

# 웹브라우저 - 웹서버 사이 데이터 직렬화/역직렬화.
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# .env 파일.
dotenv = "0.15.0"

# sqlx.
sqlx = {version = "0.8.2", default-features = false, features = ["postgres", "runtime-tokio", "macros"]}

# 비밀번호 해시.
rust-argon2 = "2.1.0"

[dev-dependencies]
# 비동기 런타임 - 비동기 테스트.
actix-rt = "2.10.0"